# backend/src/main/java/com/team8/taaks/controller/GlobalAuthExceptionHandler.java
@@ -1,10 +1,13 @@
 package com.team8.taaks.controller;
 
+import com.team8.taaks.dto.ErrorResponse;
+
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 
 @RestControllerAdvice
@@ -16,9 +19,10 @@ public class GlobalAuthExceptionHandler {
             description = "exception",
             content = @Content(schema = @Schema(implementation = ErrorResponse.class)))
     public ErrorResponse handle(Exception  ex) {
+        if (ex instanceof ResponseStatusException) {
+            return new ErrorResponse(((ResponseStatusException) ex).getReason());
+        }
         return new ErrorResponse(ex.getMessage());
     }
 
-    @Schema(description = "エラー時のレスポンス")
-    public record ErrorResponse(String message) { }
 }
