# backend/src/main/java/com/team8/taaks/controller/LoginController.java
@@ -1,6 +1,7 @@
 package com.team8.taaks.controller;
 
 
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -58,7 +59,7 @@ public class LoginController {
 		securityContextHolderStrategy.setContext(context);
 		securityContextRepository.saveContext(context, request, response); 
         if (authenticationResponse.isAuthenticated()) {
-			LoginResponse loginResponse = new LoginResponse(token, new UsersResponse(user.getUsername(), user.getNickName(), user.getId()));
+			LoginResponse loginResponse = new LoginResponse(token, new UsersResponse(user.getUsername(), user.getId()));
             return ResponseEntity.ok(loginResponse);
         } else {
 			return ResponseEntity.status(401).build();
@@ -67,13 +68,12 @@ public class LoginController {
 
 	@GetMapping("/users/me")
 	public ResponseEntity<UsersResponse> userInfo(@AuthenticationPrincipal TaakUser user) {
-		return ResponseEntity.ok(new UsersResponse(user.getUsername(), user.getNickName(), user.getId()));
+		return ResponseEntity.ok(new UsersResponse(user.getUsername(), user.getId()));
 	}
 	
-
 	public record LoginRequest(String username, String password) {
 	}
-	public record UsersResponse(String username, String nickname, Long id) {
+	public record UsersResponse(String username, Long id) {
 	}
 	public record LoginResponse(String token, UsersResponse user) {
 	}
