# backend/src/main/java/com/team8/taaks/dto/ErrorResponse.java
@@ -1,0 +1,6 @@
+package com.team8.taaks.dto;
+
+import io.swagger.v3.oas.annotations.media.Schema;
+
+@Schema(description = "エラー時のレスポンス")
+public record ErrorResponse(String message) { }
